# openvino-rs-experiment

./: .dockerignore  .gitattributes  .gitignore  Cargo.toml  Dockerfile  Dockerfile.standalone  README-act-inference.md  README-check-models.md  README-device-troubleshooting.md  README.md  benchies.md  benchmark-all-python.sh  benchmark-all.sh  benchmark-results.md  build-standalone.sh  docker-compose.yml  inference-with-act.md  run-inference.sh
episodes/ep_000_dc7198bd/: data.jsonl  stats.json
models/act-onnx/: act.onnx  act.onnx.data  manifest.json  metadata.yaml
models/act-openvino/: act.xml
models/act-openvino-fp16/: act.xml  manifest.json  metadata.yaml
models/act-torch/: act.pt  metadata.yaml
models/card-classification/: model.xml
models/card-classification-fp16/: model.xml
models/fish-detection/: model.xml
models/fish-detection-fp16/: model.xml
python/: Dockerfile  README.md  docker-compose.python.yml  pyproject.toml
python/inference_rs/: __init__.py  act_engine.py  benchmark.py  cli.py  engine.py  labels.py  output.py  postprocessing.py  preprocessing.py
src/: act.rs  benchmark.rs  engine.rs  labels.rs  lib.rs  main.rs  output.rs  postprocessing.rs  preprocessing.rs  visualization.rs
src/domain/: error.rs  model.rs  types.rs
src/infra/: device.rs  device_compat.rs  diagnostics.rs  mod.rs  model_info.rs  tensor_utils.rs
src/models/: act.rs  mod.rs  model_wrapper.rs  registry.rs  vision.rs
