[package]
name = "inference-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
openvino = { version = "0.9", features = ["runtime-linking"] }
openvino-sys = { version = "0.9", features = ["runtime-linking"] }
image = "0.25"
imageproc = "0.26.1"
ab_glyph = "0.2"
ndarray = "0.16"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
